[package]
name = "spotifi"
version = "0.1.0"
authors = ["Gregory Norton <gregory.norton@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.1.29"
hex = "0.4.2"
#rspotify = "0.10.0"
librespot = "0.1.3"
sha-1 = "0.9.1"
#tokio = { version = "0.2.22", features = ["full"] }
tokio-core = "0.1.17"
itunesdb = { git = "https://github.com/stuffandahalf/itunesdb-rs" }
